修复未关注会员头像问题
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16867 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/market_tools/tools/share_red_envelope/css/share_red_envelope.css
+++ b/weapp/market_tools/tools/share_red_envelope/css/share_red_envelope.css
@@ -264,6 +264,14 @@ html,body{
 	top: .5rem;
 	overflow: hidden;
 }
+.xui-friends .xui-avatar img{
+	border-radius: 50%;
+	width:1.55rem;
+	height:1.55rem;
+	background-image: url(/markettools_static/share_red_envelope/img/avatar.jpg);
+	-webkit-background-size: cover;
+	background-size: cover;
+}
 .xui-friends .xui-info{
 	padding: .5rem 0 .35rem 2.3rem;
 }
