修复模拟器
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16905 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/simulator/templates/simulator/advance_simulator.html
+++ b/weapp/simulator/templates/simulator/advance_simulator.html
@@ -296,6 +296,8 @@
         });
 
         $.cookie('wx-simulate-weixin', 'true', {path:'/'});
+        $.cookie('openid_webapp_id', null, {path:'/'});
+        $.cookie('fmt', null, {path:'/'});
         </script>
     </body>
 </html>
