--- a/weapp/mobile_app/mobile_app/css/overview.css
+++ b/weapp/mobile_app/mobile_app/css/overview.css
@@ -2,6 +2,11 @@ html,body {
 	background-color: #efeff4;
 }
 
+h4{
+	text-align: center;
+	margin-top: 15px;
+}
+
 header.mui-bar {
 	display: none;
 }
@@ -21,6 +26,8 @@ header.mui-bar {
 	position: fixed;
 	top: 16px;
 	right: 6px;
+	width: 150px !important;
+	min-height: 140px !important;
 }
 #topPopover .mui-popover-arrow {
 	left: auto;
@@ -92,4 +99,55 @@ span.mui-icon {
 .sale_icon_and_count{
     padding-top: 5px;
     text-align: justify;
+}
+.drawChart{
+	height: 300px;
+	width: 100%;
+}
+
+.week_month{
+	position: absolute;
+	margin-left: 70%;
+	margin-top: 5px;
+	z-index: 1000;
+}
+
+.week_month .week{
+	margin-right: 0px;
+	width: 25px;
+}
+
+.week_month .month{
+	margin-left: 5px;
+	width: 30px;
+}
+
+.week_month li{
+	font-size: 16px;
+	color: gainsboro;
+	display: inline-block;
+}
+
+.week_month li.active{
+	color: #000;
+}
+
+table {
+	text-align:center;
+	border-collapse: separate;
+	border-spacing: 1px 4px;
+}
+
+.table_cell{
+	color: #1BC6FF;
+	font-size: 1.5em;
+}
+.xui-chart-btn{
+	position: absolute;
+	margin-top: 110px;
+	margin-left: 40%;
+}
+.xui-chart-container{
+	width: 100%;
+	height: 260px;
 }
