--- a/weapp/mall/templates/mall/editor/create_red_envelope_rule.html
+++ b/weapp/mall/templates/mall/editor/create_red_envelope_rule.html
@@ -72,6 +72,13 @@
     left: 0;
     z-index: 9999;
   }
+  .popover{
+    box-shadow: none;
+    width:180px;
+    font-size: 12px;
+    border-radius:3px;
+    line-height: 20px;
+  }
 </style>
 {% endblock %}
 
@@ -177,7 +184,7 @@
     </div>
 
     <div class="form-group h500">
-      <label class="control-label col-sm-2 col-sm-offset-1 pt0 w110">使用说明</label>
+      <label class="control-label col-sm-2 col-sm-offset-1 pt0 w110">活动说明</label>
       <div class="controls">
           <div style="margin-left:120px;">
             <textarea class="xui-hide" id="detail" name="detail" data-ui-role="richtext-editor" data-type="full" data-height="150" data-width="420">
@@ -193,7 +200,7 @@
         <hr class="ml30" style="border-color:#ccc;margin-top:8px;width:638px;">
         <div class="form-group pr" style="min-height:100px;">
             <label for="" class="control-label col-sm-2 col-sm-offset-1 pt0 w110">分享图片</label>
-            <p class="xui-imgTips">注：不上传为使用默认图片<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;推荐尺寸:90*90，仅支持jpg,png&nbsp;&nbsp;<i>?</i></p>
+            <p class="xui-imgTips">注：不上传为使用默认图片<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;推荐尺寸:90*90，仅支持jpg,png&nbsp;&nbsp;<i class="xa-tips">?</i></p>
             <input type="hidden" name="share_pic" id="share_pic" value="{% if red_envelope_rule.share_pic %}{{red_envelope_rule.share_pic }}{% else %}/static_v2/img/editor/redEnv.jpg{% endif %}" data-ui-role="image-selector" data-width="90" data-height="90"/>
             <div data-ui-role="image-selector-view" auto-show-help="false" style="margin-left: 120px;">
             </div>
@@ -258,7 +265,13 @@ $(document).ready(function(){
         }
     });
 
-
+    $('.xa-tips').popover({
+      template:"<div class='popover'><div class='popover-content'></div></div>",
+      content : "分享图片和分享描述用于朋友圈查看时的展示内容",
+      trigger : "hover",
+      html : true,
+      placement : "bottom"
+    });
 // 提交按钮
   $('.xa-submit').click(function(event) {
     if (!W.validate()) {
