[merged] 合并weapp_2.0_stats. 执行操作： svn update -r 16285 svn merge --dry-run http://s11/svn/weapp/web/branches/weapp_2.0_stats -r16287:16939 svn update
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16978 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/stats/templates/manage/manage_summary.html
+++ b/weapp/stats/templates/manage/manage_summary.html
@@ -24,7 +24,7 @@
                         <div class="xui-i-wrapFirst h80 w100" >
                             <p class=" fl ml10 w140"><img class="fl" src="/static_v2/img/editor/icon_money.png"/><span class="xui-i-value f18 fl ml5">当前微品牌价值</span></p>
                             <div class="cb"></div>
-                            <p class="fl ml10 w150 f22 fn" style="text-align:left;">￥{{ brand_value }}</p>
+                            <p class="fl ml10 w150 pl10 f24 fn" style="text-align:right;">￥{{ brand_value }}</p>
                         </div>
                         <p class=" fr xui--wrapFirst-money">
                             {% ifequal value_sign 1 %}
