--- a/weapp/termite/static/termite_js/app/component/wepage/pageheader/pageheader.html
+++ b/weapp/termite/static/termite_js/app/component/wepage/pageheader/pageheader.html
@@ -2,7 +2,7 @@
 
 {% if component.type == 'wepage.pageheader' %}
 <div 
-    class="wui-pageheader pb10" 
+    class="wui-pageheader" 
     data-component-cid="{{component.cid}}" 
     data-index="{{component.model.index}}" 
     style="">
@@ -13,6 +13,6 @@
         </div>
     </div>
     <div class="wui-shop-title">{{component.model.title}}</div>
-    <div style="height:57px;background:#fff;"></div>
+    <div style="height:50px;background:#fff;"></div>
 </div>
 {% endif %}
