[delete]: * 去掉 预览参数
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@17077 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/termite2/templates/termite2/manager_pages.html
+++ b/weapp/termite2/templates/termite2/manager_pages.html
@@ -33,7 +33,7 @@
                             {% endif %}
                         </div>
                         <div>
-                            <a href="/termite2/termite_preview/?id={{page.id}}view_editing_data=true" target="_blank" class="btn btn-default mt5">预览</a>
+                            <a href="/termite2/termite_preview/?id={{page.id}}" target="_blank" class="btn btn-default mt5">预览</a>
                             <a href="javascript:void(0);" class="xa-setCover btn btn-default mt5">设置封面</a>
                             <a href="javascript:void(0);" class="xa-deleteManagerProject btn btn-danger mt5">删除</a>
                         </div>
