--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/shopping_cart.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/shopping_cart.html
@@ -174,6 +174,7 @@
                                             data-ui-role-id="{{product.id}}-{{product.model_name}}"
                                             data-product-model-id="{{product.model.id}}"
                                             data-product-count-per-purchase="{{product.promotion.detail.count_per_purchase}}"
+                                            data-minlimit="{{product.min_limit}}"
                                             {% if product.stock_type == 1 %}
                                                 {% if product.promotion.detail.count_per_purchase and product.promotion.detail.count_per_purchase < product.stocks %}
                                                     data-max-count="{{product.promotion.detail.count_per_purchase}}"
