[merage from wechat_2] *代言人二维码 *分享加油 *云管家基础 *积分bdd *关注积分同步 *删除用户分析
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@17142 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/static_v2/css/base.css
+++ b/weapp/static_v2/css/base.css
@@ -610,6 +610,9 @@ select{
 .xui-mainPanel .xui-sideBar-order_list {
 	background-position: 50px -402px;
 }
+.xui-mainPanel  .xui-sideBar-qrcode{
+	background-position: -48px -480px;
+}
 .xui-mainPanel .xui-sideBar-wepage {
 	background-position:-49px -402px;
 }
