--- a/weapp/static_v2/js/view/weixin_qrcode_prize/template.html
+++ b/weapp/static_v2/js/view/weixin_qrcode_prize/template.html
@@ -1,7 +1,7 @@
 <script id="market-tool-prize-selector-tmpl-src" type='text/x-jquery-tmpl'>
 <div class="">
 	<div class='mt10 ml0' style="margin-top:-2px;">
-        <select id="prizeTypesSelector" name="prize_type" class="span2 mr10 xa-selectPrizeType">
+        <select id="prizeTypesSelector" name="prize_type" class="span2 mr10 xa-selectPrizeType w120">
             {{each(i, prizeType) prize_types }}
             {{if prizeType == selected_prize_type}}
             <option value="${prizeType}" selected>${prizeType}</option>
