--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -15,7 +15,8 @@
         <link type="text/css" rel="stylesheet" href="/termite_static/v4/css/base.css">
         <link type="text/css" rel="stylesheet" href="/termite_static/v4/css/webapp_default.css">
         <link type="text/css" rel="stylesheet" href="/termite_static/v4/css/widget.css">        
-        <link type="text/css" rel="stylesheet" href="/termite_static/v4/css/idangerous.swiper.css">        
+        <link type="text/css" rel="stylesheet" href="/termite_static/v4/css/idangerous.swiper.css">  
+        <link rel="stylesheet" type="text/css" href="/static_v2/css/cloudHousekepper.css">      
         <!-- *finish develop css* [do not modify and delete this line, it will be needed by dist process] -->
         {% else %}
         <link type="text/css" rel="stylesheet" media="all" href="{{cdn_host}}/standard_static/css/webapp_content_base_all.css">
@@ -43,6 +44,7 @@
         <script type="text/javascript" src="/termite_static/v3/webapp/webapp.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/weixinapi.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/preview_imges.js"></script>
+        <script type="text/javascript" src="/termite_static/v3/gmu/widget/alert.js"></script>
 
         <script type="text/javascript" src="/termite_static/v3/system/debug.js"></script>
         <!-- *finish develop js* [do not modify and delete this line, it will be needed by dist process] -->
