--- a/weapp/weixin2/templates/weixin/home/outline.html
+++ b/weapp/weixin2/templates/weixin/home/outline.html
@@ -19,7 +19,7 @@
             <li><em>{{ yesterday_net_count }}</em><br>昨日跑路粉丝</li>
             <li><em><a href="/new_weixin/fanses/" class="xui-i-count">{{ member_count }}</a></em><br>总粉丝</li>
         </ul>
-        <div class="xui-ChartContent">
+        <!-- <div class="xui-ChartContent">
             <div class="panel-heading xui-bold">用户分析</div>
             <div class="xui-ChartBody" id="purchaseTrend" data-ui-role="weixinEchart" data-app="new_weixin" data-resource="user_analysis" data-wrap-el=".xa-member-tips-wrap">
             </div>
@@ -31,7 +31,7 @@
                     <li><span>累计人数：</span>已关注和已跑路的粉丝总数。</li>
                 </ul>
             </div>
-        </div>
+        </div> -->
         <div class="xui-ChartContent mb50">
             <div class="panel-heading xui-bold">互动分析</div>
             <div class="xui-ChartBody" id="visitTrend" data-ui-role="weixinEchart" data-app="new_weixin" data-resource="page_track_analysis" data-wrap-el=".xa-message-tips-wrap">
