--- a/weapp/weixin2/templates/weixin/advance_manage/qrcodes.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/qrcodes.html
@@ -20,6 +20,23 @@
 		background: url('/static_v2/img/weixin/storing.png') no-repeat;
 
 	}
+	.xui-weixin-qrcodePage .xui-userData{
+		position: absolute;
+		border:1px solid #eee;
+		background: #fff;
+		left:25px;
+		display: none;
+		z-index: 10;
+		padding:15px 10px;
+		width: 225px;
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+		text-align: right;
+	}
+	.xui-weixin-qrcodePage .xui-userData p:last-child{
+		margin:0;
+	}
 </style>
 {% endblock%}
 {% block content-panel %}
@@ -60,10 +77,10 @@
 	{% verbatim %}
 		<script id="setting_list_view" type="text/x-jquery-tmpl">
 			{{if items}}
-			<table class="table table-bordered table-condensed xb-stripedTable xb-theadBg">
+			<table class="table table-condensed xb-stripedTable xb-theadBg">
 				<thead>
 					<tr>
-						<th style="width:25%;">
+						<th style="width:20%;">
 							<p class=" m0">
 								<span class="">二维码名称</span>
 							</p>
@@ -72,8 +89,9 @@
 						<th style="width:10%;" class="tx_sortable xa-sorting" data-sort-attr='count' data-sort-direction="up"><a href="javascript:;">关注数量</a> <img class="xa-storingimg" src="" alt=""> </th>
 						<th style="width:15%;" class="tx_sortable" data-sort-attr='total_final_price'><a href="javascript:void(0);">扫码后成交金额</a></th>
 						<th style="width:15%;">扫码奖励</th>
-						<th style="width:15%;" class="tx_sortable" data-sort-attr='created_at'>创建时间</th>
+						<th style="width:10%;" class="tx_sortable" data-sort-attr='created_at'><a href="javascript:void(0);">创建时间</a></th>
 						<th style="width:10%;">备注</th>
+						<th style="width:100px;">关联会员</th>
 						<th style="width:10%;">操作</th>
 					</tr>
 				</thead>
@@ -81,7 +99,7 @@
 					{{if items.length}}
 						{{each(i, qrcode) items}}
 							<tr class="h40" data-id="${qrcode.qrcode_id}">
-								<td style="word-break:break-all; overflow:auto;">
+								<td style="word-break:break-all; overflow:auto;padding:0 20px;text-align:left;170px;">
 									<a href="/new_weixin/qrcode/?setting_id=${qrcode.id}">${qrcode.name}</a>
 								</td>
 								<td >
@@ -91,7 +109,7 @@
 										${qrcode.count}
 									{{/if}}
 								</td>
-								<td style="word-break:break-all; overflow:auto;">
+								<td style="word-break:break-all; overflow:auto;position:relative;">
 									{{if qrcode.total_final_price > 0}}
 									   <a class="relation-text" href="/new_weixin/qrcode_order/?setting_id=${qrcode.id}">￥${qrcode.total_final_price}</a>
 									{{else}}
@@ -101,11 +119,26 @@
 								<td style="word-break:break-all; overflow:auto;">
 									${ qrcode.cur_prize }
 								</td>
-								<td style="word-break:break-all; overflow:auto;">
+								<td style="word-break:break-all; overflow:auto; padding:0 15px;">
 									${ qrcode.created_at }
 								</td>
 								<td style="word-break:break-all; overflow:auto;">
 									${ qrcode.remark }
+								</td>
+								<td class="pr">
+									<div style="width:100px;overflow:hidden;white-space:nowrap;text-overflow:ellipsis;">
+									{{if qrcode.bing_member_id}}
+										<a href="/member/member_detail/edit/?id=${qrcode.bing_member_id}" class="xa-showData">
+											{{html qrcode.bing_member_name }}
+										</a>
+										<div class='xui-userData xa-data'>
+											<p>关联时间：${ qrcode.bing_time }</p>
+											{{if qrcode.cancel_time }}
+											<p class="mb0">取消关联时间：${qrcode.cancel_time}</p>
+											{{/if}}
+										</div>
+									{{/if}}
+									</div>
 								</td>
 								<td>
 									<a target="_blank" href="https://mp.weixin.qq.com/cgi-bin/showqrcode?ticket=${qrcode.ticket}">查看二维码</a>
@@ -149,6 +182,11 @@
 				settingId: $tr.attr('data-id')
 			});
 		});
-
+		$('body').delegate('.xa-showData','mouseover',function(event) {
+			$(event.target).siblings('.xa-data').css('display', 'block');
+		});
+		$('body').delegate('.xa-showData','mouseleave',function(event) {
+			$(event.target).siblings('.xa-data').css('display', 'none');
+		});
 	</script>
 {% endblock %}
