--- a/weapp/mall/templates/mall/editor/edit_product.html
+++ b/weapp/mall/templates/mall/editor/edit_product.html
@@ -84,7 +84,7 @@
 				<label class="control-label fl" for="min_limit">起购数量：</label>
 				<div class="fl w700 pl5">
 					<input type="text" class="form-control w106 fl" id="min_limit" name="min_limit" placeholder="" value="{% if product %}{{ product.min_limit }}{% endif %}" maxlength="5" data-validate="norequire,,require-int"/>
-					<span class="xui-fontGary">（设置起购数量大于1的商品，将不能才加限时抢购活动）</span>
+					<span class="xui-fontGary">（设置起购数量大于1的商品，将不能参加限时抢购活动）</span>
 					<div class="errorHint"></div>
 				</div>
 			</div>
