[update]* *修改提示样式
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@17237 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/refueling_page.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/refueling_page.html
@@ -15,6 +15,9 @@ html,body{
 body .wui-alert{
 	font-size: .8rem;
 }
+.xui-attentionAlert a{
+	font-size: .75rem!important;
+}
 .xui-info{
 	padding:.6rem .75rem .5rem .75rem;
 	border-top:1px solid #e5e5e5;
